# sovioths

./: README.md  mapreduce.cabal
src/: BlockChain.hs  Main.hs  MerkleTree.hs
