cabal-version:      2.4
name:               sovioths
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             soulomoon
maintainer:         fwy996602672@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable Main
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options: -Wall
  other-modules:   
    BlockChain
    MerkleTree
  build-depends:
      base            >=4.12  
    , text
    , mtl
    , containers
    , hashable
    , directory
    , bytestring
    , binary
    , cryptonite
    , memory
  main-is: Main.hs


